@@ -1,3 +1,8 @@
+Thu Aug 28 18:18:53 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: Add "internal" interface to allow
+	  building ELITE_SET queries from raw xapian terms.
+
 Thu Aug 28 17:29:24 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/query.py,xappy/unittests/query_serialise.py: Add support
